--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.MainActivity">
+    android:id="@+id/drawerLayout">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:ignore="ExtraText">
 
-    <TextView
+    <DatePicker
+        android:id="@+id/datePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="16dp"
+        android:calendarViewShown="false"
+        android:spinnersShown="true"
+        android:visibility="gone"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/datePickerButton"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="134dp"
+        android:layout_marginEnd="2dp"
+        android:background="@android:color/transparent"
+        android:drawableLeft="@drawable/calendar"
+        android:text="Que dia é hoje?"
+        android:textColor="@android:color/black"
+        android:textSize="23dp" />
+
+    <EditText
+        android:id="@+id/idTitulo"
+        android:layout_width="match_parent"
+        android:layout_height="95dp"
+        android:layout_below="@+id/datePickerButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="47dp"
+        android:layout_marginEnd="3dp"
+        android:hint="Título"
+        android:inputType="text"
+        android:drawableStart="@drawable/lapis"
+        android:drawablePadding="8dp"
+        />
+
+    <EditText
+        android:id="@+id/idDescricao"
+        android:layout_width="393dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/idTitulo"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="-2dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="138dp"
+        android:hint="Pensamento"
+        android:inputType="textMultiLine" />
+
+    <EditText
+        android:id="@+id/idHumor"
+        android:layout_width="wrap_content"
+        android:layout_height="82dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="22dp"
+        android:hint="Qual seu humor?" />
+
+    <ImageButton
+        android:id="@+id/idSalvar"
+        android:layout_width="63dp"
+        android:layout_height="65dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="99dp"
+        android:backgroundTint="#00FFFFFF"
+        android:contentDescription="Salvar"
+        android:onClick="salvar"
+        app:srcCompat="@drawable/salvar" />
+
+    <ImageButton
+        android:id="@+id/idSair"
+        android:layout_width="62dp"
+        android:layout_height="67dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="6dp"
+        android:backgroundTint="#00FFFFFF"
+        android:contentDescription="Sair"
+        app:srcCompat="@drawable/sair" />
+
+    <ImageButton
+        android:id="@+id/idNotificacao"
+        android:layout_width="76dp"
+        android:layout_height="68dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#00FFFFFF"
+        android:contentDescription="notificacao"
+        app:srcCompat="@drawable/notificacao" />
+
+</RelativeLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+
+        app:headerLayout="@layout/barranavegacao"
+        app:menu="@menu/menu"
+        />
+
+</androidx.drawerlayout.widget.DrawerLayout>
